Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
 .output h3{
     font-size: 30px;
     color: #ffffff;
+    overflow-wrap: anywhere;
 }
 
 .output .word{
